--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "child_process": "^1.0.2",
     "express": "^4.18.2",
     "typescript": "^5.0.4"
   }
